@@ -1,8 +1,8 @@
 [2008--] 0.9.1
 + API: Added Dwoo_Compiler->setAutoEscape() and getAutoEscape() to modify the
   automatic html entity escaping setting. This is disabled by default, and when
-  enabled can be overriden with the {safe $var} plugin or the 
-  {auto_escape disable} block plugin. The block plugin can also be used to 
+  enabled can be overriden with the {safe $var} plugin or the
+  {auto_escape disable} block plugin. The block plugin can also be used to
   enable this mode from within a template
 + Syntax: Mixing named and unnamed parameters is now allowed, as long as the
   unnamed ones appear first
@@ -14,6 +14,8 @@
 * Fixed complex variables (i.e. {$_root[$c[$x.0]].0}) parsing bugs
 * Fixed $dwoo->addResource() breaking if the resource class was not loaded yet,
   autoload should now be called (thanks mike)
+* Fixed a block stack bug that messed up {textformat} and possibly usermade
+  block plugins
 
 [2008-05-10] 0.9.0
 ! BC Break: changed all class names to be PEAR compliant (aka use underscores
